[package]
name = "ioq3-modio-dlurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
headers = "0.3.8"
http = "0.2.9"
modio = "0.7.2"
tokio = { version = "1.27.0", features = ["full"] }
