[package]
name = "ioq3-modio-dlurl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "tower-log", "tracing"] }
axum-extra = { version = "0.12", default-features = false, features = ["typed-routing", "typed-header", "tracing"] }
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
headers = { version = "0.4", default-features = false, features = [] }
serde = { version = "1", default-features = false, features = ["derive"] }
modio = { version = "0.14", default-features = false, features = ["rustls-native-roots"]}
